# sammy

./: CHANGELOG.md  README.md  sammy.cabal  test.asm
src/: Instruction.hs  Main.hs  Reader.hs  VM.hs  VMPrinter.hs
src/Control/Monad/: WP.hs
test/: test.asm
